fix: reduce h1 font size for improved visibility and update text shadow colors for better contrast

--- a/css/style.css
+++ b/css/style.css
@@ -48,9 +48,6 @@ header {
   display: auto;
 }
 
-
-@import url(https://fonts.googleapis.com/css?family=Righteous);
-
 *, *:before, *:after {
   margin: 0;
   padding: 0;
@@ -76,7 +73,7 @@ html, body {
 h1 {
   display: inline-block;
   color: white;
-  font-size: 8em; 
+  font-size: 6em; 
   text-shadow: .03em .03em 0 hsla(230,40%,50%,1);
   }
   h1:after {
@@ -90,8 +87,8 @@ h1 {
       linear-gradient(
         45deg,
         transparent 45%,
-        hsla(48,20%,90%,1) 45%,
-        hsla(48,20%,90%,1) 55%,
+        rgb(82, 81, 81) 45%,
+        rgb(82, 81, 81) 55%,
         transparent 0
         );
     background-size: .05em .05em;
